# Test-Localization

./: README.md  command_tree.py  convert_temperature.json  local_utils.py  main.py  purify.py  pyproject.toml  requirements.txt  temperature_locale.json
cogs/: extra.py
locales/: de.json  en-us.json  es-419.json  es-ES.json  fi.json  fr.json  hi.json  ja.json  nl.json  pl.json  sv-SE.json
test_locales/: de.json  en-GB.json  en-UK.json  en-US.json  es-419.json  es-ES.json  fi.json  fr.json  hi.json  ja.json  nl.json  pl.json  pt-BR.json  sv-SE.json  tr.json  zh-CN.json  zh-TW.json
